# authdemo

./: .auto-claude-status  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Tasks.yaml  VERIFICATION_SUMMARY_subtask-8-4.md  alembic.ini  claude_code_backend_event_system_spec.md  docker-compose.yml  pyproject.toml  setup_db.py  test_conn.py
.auto-claude/: project_index.json
.auto-claude/roadmap/: competitor_analysis.json  graph_hints.json  project_index.json  roadmap.json  roadmap_discovery.json
.auto-claude/specs/001-create-demo-ordering-interface/: QA_FIX_REQUEST.md  VERIFICATION_SUMMARY_subtask-8-2.md  VERIFICATION_SUMMARY_subtask-8-3.md  build-progress.txt  complexity_assessment.json  context.json  implementation_plan.json  init.sh  project_index.json  qa_report.md  requirements.json  review_state.json  spec.md  task_logs.json  task_metadata.json  (+1 more)
.claude/: settings.local.json
alembic/: env.py  script.py.mako
app/: __init__.py  main.py
app/core/: config.py  logging.py
app/db/: session.py
app/middleware/: __init__.py  error_handling.py  rate_limit.py
app/models/: event.py
app/security/: __init__.py  authorization.py  jwt.py
app/services/: audit.py  event_writer.py  projections.py  workflows.py
frontend/: .env.example  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
static/: README.md  index.html
tests/: conftest.py  test_api_routes.py  test_auth.py  test_authorization.py  test_event_writer.py  test_middleware.py
(+108 files in other folders)
